# fastapi-mongodb-api

./: .gitignore  pyproject.toml  readme.md
app/server/: app.py  database.py
