[tool.poetry]
name = "fastapi-mongodb-api"
version = "0.1.0"
description = ""
authors = ["James Heywood <jdheywood@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.110.3"
uvicorn = "0.28.1"
email-validator = "2.1.1"
motor = "^3.4"

[tool.poetry.dev-dependencies]
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
